--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" type="text/css" href="css.css" />
         <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
 
+
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width">
         <META name="keywords" content="услуги электрика, вызвать электрика, электрик, электрик киев, електрик, срочный вызов электрика, электромонтаж, монтаж проводки, прокладка проводки, ремонт розетки, прицепить люстру">
         <title>Электрик Киев | Бесплатный вызов мастера</title>
