Add hide Price button

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1530,6 +1530,12 @@
 
                         <!--End of Send Form1-->
 
+        <!--Button Show Price-->
+        <div class="col-xs-12" style="float: none; margin: auto;">
+            <input id="price" type="submit" name="submit" data-target="#demo-1" data-toggle="modal" value="СКРЫТЬ ПРАЙС" >
+        </div>
+        <!-- End Button Show Price-->
+
                     </div>
                 </div>
             </div>
