Submit buttons equivalent width fix

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -18,22 +18,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
         <script defer src="js/jquery.flexslider.js"></script>
 
-        <!--loading flexslider
-        <script type="text/javascript">
-        $(function() {
-        SyntaxHighlighter.all();
-        });
-        $(window).load(function() {
-        $('.flexslider').flexslider({
-        animation : "slide",
-        start : function(slider) {
-        $('body').removeClass('loading');
-        }
-        });
-        });
-        </script>
-
-        Control flexslider-->
+        <!--Control flexslider-->
         <script type="text/javascript">
 			// Youtube and Vimeo Flexslider Control
 			// Partly from Duppi on GitHub, partly from digging into the YouTube API
@@ -717,7 +702,7 @@
             <form action= "post.php" method= "POST">
                 <table style="width:100%; height:60px; margin-top:15px ">
                     <tr class="ul1" style="margin-top:10px;">
-                        <td style="padding-left:25px;">
+                        <td style="padding-left:3%;">
                         <div style="padding-left:4px">
                             <div style="width:40px; height:60px; background-color:white; margin-top:0px; "><img src="icon/png/business64.png" class="img-name">
                             </div>
@@ -734,8 +719,8 @@
                             <input required class="name" type="text" name="phone" placeholder="Ваш номер" >
                         </div></td>
                         <td>
-                        <div style="padding:0px; margin: auto; width: 145px">
-                            <button class="submit_" type="submit" name="submit" value="ЗАКАЗАТЬ" style=" margin-top:0px; width: 100%;">
+                        <div style="padding:0px; width: 270px; margin: 0 25px 0 10px;">
+                            <button class="submit_" type="submit" name="submit" value="ЗАКАЗАТЬ" style=" margin-top:0px; padding: 0 30%; width: 100%;">
                                 ЗАКАЗАТЬ
                             </button>
                         </div></td>
